| Summary: | ASTERISK-29994: chan_dahdi: Round robin array size is too small for max number of groups | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-03-29 19:21:35 | Date Closed: | 2022-04-27 11:39:02 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_dahdi |
| Versions: | 18.11.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | In chan_dahdi.conf, we have:
{noformat} ; Logical groups can be assigned to allow outgoing roll-over. Groups range ; from 0 to 63, and multiple groups can be specified. By default the ; channel is not a member of any group. {noformat} However, there is a typo in chan_dahdi.c: {noformat} /*! Round robin search locations. */ static struct dahdi_pvt *round_robin[32]; {noformat} This actually needs to be 64, or otherwise only groups 0-31 work correctly with round robin, and 32+ don't work with round robin but work with "G" for instance. This fixes this issue so that they are both consistent with allowing 64 groups (0-63). | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-03-29 19:21:36.683-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-04-27 11:39:02.956-0500 Change 18467 merged by Joshua Colp: chan_dahdi: Fix insufficient array size for round robin. [https://gerrit.asterisk.org/c/asterisk/+/18467|https://gerrit.asterisk.org/c/asterisk/+/18467] By: Friendly Automation (friendly-automation) 2022-04-27 11:40:11.010-0500 Change 18469 merged by Joshua Colp: chan_dahdi: Fix insufficient array size for round robin. [https://gerrit.asterisk.org/c/asterisk/+/18469|https://gerrit.asterisk.org/c/asterisk/+/18469] By: Friendly Automation (friendly-automation) 2022-04-27 11:40:34.178-0500 Change 18468 merged by Joshua Colp: chan_dahdi: Fix insufficient array size for round robin. [https://gerrit.asterisk.org/c/asterisk/+/18468|https://gerrit.asterisk.org/c/asterisk/+/18468] By: Friendly Automation (friendly-automation) 2022-04-27 11:40:55.660-0500 Change 18309 merged by Joshua Colp: chan_dahdi: Fix insufficient array size for round robin. [https://gerrit.asterisk.org/c/asterisk/+/18309|https://gerrit.asterisk.org/c/asterisk/+/18309] | ||